Fix clone brush

Do not skip calling parent class implementation

Fixes T2246
BUG:361577